<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_favorite">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.cpen391.torch.mainmenufragments.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_pair"
        android:name="com.cpen391.torch.mainmenufragments.PairFragment"
        android:label="@string/title_pair"
        tools:layout="@layout/fragment_pair" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.cpen391.torch.mainmenufragments.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />
</navigation>