<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreInfoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/please_enter_your_store_name" />

            <EditText
                android:id="@+id/store_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/store_name_hint"
                android:inputType="text"
                android:autofillHints="@string/store_name_hint" />

            <TextView
                android:id="@+id/store_name_invalid_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/UI_get_location_hint" />

            <Button
                android:id="@+id/get_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UI_get_current_location"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/location_textView"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/store_logo_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/UI_store_logo_hint" />

            <ImageButton
                android:id="@+id/store_logo_change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_photo_24"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/UI_store_logo_hint" />

            <Button
                android:id="@+id/finish_store_info_editing_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/UI_finish" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>